added new html files to make add transaction page and yes or no buttons

--- a/styles/style.css
+++ b/styles/style.css
@@ -97,3 +97,15 @@
   object-fit: cover;
   /* Ensure all images are square */
 }
+
+#addtrans {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#yesno {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
