created a new html file for a transaction history, prompted the user to add input to create a transaction to be put into the database, styled the transaction pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -250,3 +250,8 @@
         text-align: center;
     }
 /*↑ yearlyreport.html Style elements ↑*/
+
+/* Centers text in all the transactionforms */
+#transactionform {
+  text-align: center;
+}
