styled footer to be the same colour as the navbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0; /* Light grey background */
   padding: 20px;
 }
 
@@ -366,7 +365,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #dedcdc;
   text-align: center; /* Center aligning text */
 }
 
