--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 }
 
 
-/* centers logo */
+/* Crave Control logo */
 .logo {
   display: flex;
   justify-content: center;
@@ -28,7 +28,7 @@
   height: auto; 
 }
 
-/* Centers logo and makes the image smaller */
+/*no clue whats below */
 
 #welcome-back {
   text-align: center;
@@ -425,3 +425,51 @@ h1 {
   transform: translateY(-50%);
 }
 /*↑ aboutus.html Style elements ↑*/
+
+/*↓ profile.html Style elements ↓*/
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #dedcdc;
+  text-align: center; /* Center aligning text */
+}
+
+.profilemaincontainer {
+  max-width: 800px;
+  margin: 20px auto; /* Centering the container horizontally */
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  text-align: left; /* Resetting text alignment to left for content within the container */
+}
+
+h1 {
+  margin-bottom: 20px; /* Adding some space below the heading */
+}
+
+.user {
+  margin-bottom: 40px;
+}
+
+.dev h2 {
+  margin-bottom: 10px;
+}
+
+.dev p {
+  text-align: justify;
+}
+
+#back-button-image-aboutus {
+  max-width: 40px;
+  max-height: 40px;
+  min-width: 20px; 
+  min-height: 20px;
+  margin-bottom: 5px;
+  position: fixed;
+  left: 100px;
+  top: 25%;
+  transform: translateY(-50%);
+}
+/*↑ profile.html Style elements ↑*/
