--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,10 @@ body {
   padding: 0;
   background-color: #dedcdccb;
   text-align: center;
-  position: relative; /* Ensure position relative for absolute positioning */
+  position: relative; 
 }
 
-/* Create a pseudo-element to overlay the blurred background */
+
 body::before {
   content: "";
   position: fixed;
@@ -17,8 +17,8 @@ body::before {
   height: 100%;
   background-image: url('https://img.pixers.pics/pho_wat(s3:700/FO/10/78/61/95/3/700_FO107861953_4fbb9333efac26f172231c15d8c0934c.jpg,700,700,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,650,jpg)/posters-thin-line-icons-seamless-pattern-food-vegetables-and-fruits-icon-grey-background-for-websites-apps-presentations-cards-templates-or-blogs.jpg.jpg');  
   background-size: cover;
-  filter: blur(3px); /* Adjust the blur intensity as needed */
-  z-index: -1; /* Ensure the pseudo-element is behind the content */
+  filter: blur(3px); 
+  z-index: -1; 
 }
 
 .responsive {
@@ -50,14 +50,6 @@ body::before {
   max-width: 600px; /* Set maximum width to 90% of its container */
   min-width: 250px; /* Set minimum width for the logo */
   height: auto; /* Maintain aspect ratio */
-}
-
-.background {
-  /* Background image */
-  /* background-image: url('https://img.pixers.pics/pho_wat(s3:700/FO/10/78/61/95/3/700_FO107861953_4fbb9333efac26f172231c15d8c0934c.jpg,700,700,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,650,jpg)/posters-thin-line-icons-seamless-pattern-food-vegetables-and-fruits-icon-grey-background-for-websites-apps-presentations-cards-templates-or-blogs.jpg.jpg');  */
-  /* background-image: url('https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
-  background-size: cover; 
-  background-position: center; 
 }
 
 .text {
