--- a/styles/style.css
+++ b/styles/style.css
@@ -177,6 +177,7 @@ body::before {
 #money-spent-this-year {
   display: inline-block;
   padding: 10px 20px;
+  border-radius: 5px;
   background-color: #888888;
   color: #000000;
   border: none;
