--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@ body {
   position: relative; 
 }
 
-
 body::before {
   content: "";
   position: fixed;
@@ -47,13 +46,12 @@ body::before {
 }
 
 .logo img {
-  max-width: 600px; /* Set maximum width to 90% of its container */
-  min-width: 250px; /* Set minimum width for the logo */
-  height: auto; /* Maintain aspect ratio */
+  max-width: 600px; 
+  min-width: 250px; 
+  height: auto; 
 }
 
 .text {
-  /* Example styles for text */
   color: white;
   text-align: center;
   padding: 20px;
@@ -63,8 +61,8 @@ body::before {
 
 /* CSS styles for the delete button */
 .delete-button {
-  background-color: #888888; /* Light blue background color */
-  color: #000000; /* Dark red text color */
+  background-color: #888888; 
+  color: #000000; 
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -77,10 +75,8 @@ body::before {
 
 /* Hover effect */
 .delete-button:hover {
-  background-color: #a93f3f; /* Brighter blue on hover */
+  background-color: #a93f3f; 
 }
-
-/*no clue whats below */
 
 #welcome-back {
   text-align: center;
@@ -122,7 +118,6 @@ body::before {
   width: 70px;
 }
 
-
 #submit-button {
   padding: 8px 25px;
   font-size: 15pt;
@@ -130,8 +125,8 @@ body::before {
   margin-left: auto;
   margin-right: auto;
   border-radius: 5px;
-  background-color: #0080ff; /* Change to your desired background color */
-  color: #ffffff; /* Change to your desired text color */
+  background-color: #0080ff; 
+  color: #ffffff; 
 }
 
 /* Styles for the footer */
@@ -158,7 +153,6 @@ body::before {
   filter: brightness(80%);
 }
 
-
 #yesno {
   display: flex;
   justify-content: center;
@@ -166,7 +160,7 @@ body::before {
 }
 
 
-/*↓ monthlyspending.html Style elements ↓*/
+
 
 /*Style element for monthly spending message on monthlyspending.html*/
 #monthly-spending {
@@ -195,9 +189,7 @@ body::before {
   margin-bottom: 5px;
   position: fixed;
   left: 50px;
-  /* Adjust to position the button at the left side */
   top: 25%;
-  /* Position 25% from the top of the page */
 }
 
 /*Style element for monthly spending message container in monthlyspending.html*/
@@ -236,25 +228,14 @@ body::before {
   text-decoration: none;
 }
 
-/*↑ monthlyspending.html Style elements ↑*/
-
-/*↓ yearlyreport.html Style elements ↓*/
-
 /*Style element for how much money you have spent on monthlyspending.html*/
 #money-yearly-report {
   display: flex;
-  /* Use flexbox for centering */
   flex-direction: column;
-  /* Stack items vertically */
   justify-content: center;
-  /* Center horizontally */
   align-items: center;
-  /* Center vertically */
   width: fit-content;
-  /* Adjust width as per content */
   margin: 100px auto 50px;
-  /* Center align horizontally and add top and bottom margin */
-  /* padding: 10px 20px; */
   background-color: #888888;
   color: #000000;
   border: solid;
@@ -265,7 +246,6 @@ body::before {
 
 #money-yearly-report .report-heading {
   margin-bottom: 10px;
-  /* Add margin below the heading */
 }
 
 /* Style for the graph image container */
@@ -274,15 +254,12 @@ body::before {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  /* Add space between text and image */
 }
 
 /* Style for the graph image */
 .graph-image {
   max-width: 33.33%;
-  /* Make the image one-third of its original size */
   max-height: 33.33%;
-  /* Make the image one-third of its original size */
 }
 
 /* Style for the top spendings container */
@@ -304,8 +281,6 @@ body::before {
   margin-bottom: 5px;
 }
 
-/*↓ yearlyreport.html Style elements ↓*/
-
 /*Style element for back button image on monthlyspending.html*/
 #back-button-image {
   max-width: 40px;
@@ -320,30 +295,19 @@ body::before {
   text-align: center;
 }
 
-/*↑ yearlyreport.html Style elements ↑*/
-
 /* Centers text in all the transactionforms */
 #transactionform {
   text-align: center;
 }
 
-/*↓ monthlyreport.html Style elements ↓*/
-
 /*Style element for how much money you have spent on monthlyspending.html*/
 #money-monthly-report {
   display: flex;
-  /* Use flexbox for centering */
   flex-direction: column;
-  /* Stack items vertically */
   justify-content: center;
-  /* Center horizontally */
   align-items: center;
-  /* Center vertically */
   width: fit-content;
-  /* Adjust width as per content */
   margin: 100px auto 50px;
-  /* Center align horizontally and add top and bottom margin */
-  /* padding: 10px 20px; */
   background-color: #888888;
   color: #000000;
   border: solid;
@@ -354,7 +318,6 @@ body::before {
 
 #money-monthly-report .report-heading {
   margin-bottom: 10px;
-  /* Add margin below the heading */
 }
 
 /* Style for the graph image container */
@@ -363,15 +326,6 @@ body::before {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  /* Add space between text and image */
-}
-
-/* Style for the graph image */
-.graph-image {
-  max-width: 33.33%;
-  /* Make the image one-third of its original size */
-  max-height: 33.33%;
-  /* Make the image one-third of its original size */
 }
 
 /* Style for the top spendings container */
@@ -393,8 +347,6 @@ body::before {
   margin-bottom: 5px;
 }
 
-/*↓ yearlyreport.html Style elements ↓*/
-
 /*Style element for back button image on monthlyspending.html*/
 #back-button-image {
   max-width: 40px;
@@ -409,9 +361,6 @@ body::before {
   text-align: center;
 }
 
-/*↑ yearlyreport.html Style elements ↑*/
-
-/*↓ comparemonths.html Style elements ↓*/
 .comparison-container {
   text-align: center;
 }
@@ -428,7 +377,6 @@ body::before {
 .comparison-side {
   margin: 0 10px;
   text-align: center;
-  /* Center the text within each side */
 }
 
 .side-title {
@@ -448,18 +396,14 @@ body::before {
   height: auto;
 }
 
-/*↑ comparemonths.html Style elements ↑*/
-
 .aboutusmaincontainer {
   max-width: 800px;
   margin: 20px auto;
-  /* Centering the container horizontally */
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: left;
-  /* Resetting text alignment to left for content within the container */
 }
 
 h1 {
@@ -473,7 +417,6 @@ h1 {
 .dev img {
   display: block;
   margin: 0 auto 20px;
-  /* Centering the image horizontally */
   border-radius: 50%;
   max-width: 200px;
   height: auto;
@@ -505,29 +448,25 @@ h1 {
   margin-bottom: 5px;
   position: fixed;
   left: 100px;
-  /* Adjusted value to move the button two times further to the right */
   top: 25%;
   transform: translateY(-50%);
 }
 
-/*↑ aboutus.html Style elements ↑*/
-
-/*↓ profile.html Style elements ↓*/
 .profilemaincontainer {
   max-width: 800px;
-  margin: 20px auto; /* Centering the container horizontally */
+  margin: 20px auto; 
   padding: 20px;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  text-align: left; /* Resetting text alignment to left for content within the container */
+  text-align: left; 
 }
 
 h1 {
   text-align: center;
-  margin-bottom: 20px; /* Adding some space below the heading */
-  color: #000000; /* Changing text color */
-  font-size: 40px; /* Increasing font size */
+  margin-bottom: 20px; 
+  color: #000000; 
+  font-size: 40px; 
 }
 
 .profileinfo {
@@ -536,7 +475,7 @@ h1 {
 
 .profileinfo img {
   display: block;
-  margin: 0 auto 20px; /* Centering the image horizontally */
+  margin: 0 auto 20px; 
   border-radius: 50%;
   max-width: 200px;
   height: auto;
@@ -544,16 +483,16 @@ h1 {
 
 .profileinfo h2,
 .profileinfo h3 {
-  margin-bottom: 10px; /* Add space between Name and Email */
+  margin-bottom: 10px; 
 }
 
 .profileinfo h2:last-child {
-  margin-bottom: 0; /* Remove space after Email */
+  margin-bottom: 0; 
 }
 
 .profileinfo h3 {
-  display: inline; /* Place h3 text after h2 */
-  margin-left: 10px; /* Adjust margin as needed */
+  display: inline;
+  margin-left: 10px; 
 }
 
 .profileinfo p {
@@ -567,8 +506,7 @@ h1 {
   min-height: 20px;
   margin-bottom: 5px;
   position: fixed;
-  left: 100px; /* Adjusted value to move the button two times further to the right */
+  left: 100px; 
   top: 25%;
   transform: translateY(-50%);
 }
-/*↑ profile.html Style elements ↑*/
